// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TradeItemTool — characterization > full item transfer — formatted string with quantity breakdown 1`] = `
{
  "content": [
    {
      "text": "Traded **Longsword** from actor-from → actor-to (source: item fully removed (was qty all); destination: qty 1).",
      "type": "text",
    },
  ],
  "structuredContent": {
    "createdDocumentIds": [
      "item-001",
    ],
    "deletedDocumentIds": [
      "item-src-001",
    ],
    "fromActorId": "actor-from",
    "itemName": "Longsword",
    "operationId": "op-ti-full",
    "quantities": {
      "from": 0,
      "to": 1,
    },
    "toActorId": "actor-to",
    "updatedDocumentIds": [],
    "warnings": [],
  },
}
`;

exports[`TradeItemTool — characterization > partial quantity transfer — formatted string with remaining quantity 1`] = `
{
  "content": [
    {
      "text": "Traded **Arrows** from actor-from → actor-to (source: qty 5 remaining; destination: qty 10).",
      "type": "text",
    },
  ],
  "structuredContent": {
    "createdDocumentIds": [
      "item-002",
    ],
    "deletedDocumentIds": [],
    "fromActorId": "actor-from",
    "itemName": "Arrows",
    "operationId": "op-ti-partial",
    "quantities": {
      "from": 5,
      "to": 10,
    },
    "toActorId": "actor-to",
    "updatedDocumentIds": [
      "item-src-002",
    ],
    "warnings": [],
  },
}
`;
